fix: spacing between images and text in cards

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -3653,7 +3653,7 @@ body {
   flex-direction: row;
 }
 .card__flex--1 .card__content {
-  margin: 1.5rem 0 0 0;
+  margin: 1rem 0 0 0;
   flex-grow: 1;
 }
 @media screen and (min-width: 39em) {
@@ -3663,7 +3663,7 @@ body {
     height: 100%;
   }
   .card__flex--1 .card__content {
-    margin: 1rem 0 0 0;
+    margin: 0;
   }
 }
 
