--- a/assets/css/screen.post.css
+++ b/assets/css/screen.post.css
@@ -4593,7 +4593,7 @@ body {
 }
 
 .card__flex--1 .card__content {
-  margin: 1.5rem 0 0 0;
+  margin: 1rem 0 0 0;
   flex-grow: 1;
 }
 
@@ -4605,7 +4605,7 @@ body {
   }
 
   .card__flex--1 .card__content {
-    margin: 1rem 0 0 0;
+    margin: 0;
   }
 }
 
